project_TMDT/k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: pickelball-app
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: pickelball-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: backend
          image: ghcr.io/huynguyen12536/dtdm-ex-3/backend:latest
          ports:
            - containerPort: 5000
