project_TMDT/k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pickelball-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: pickelball-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: frontend
          image: ghcr.io/huynguyen12536/frontend:latest
          ports:
            - containerPort: 80
